model-part-done

--- a/index.html
+++ b/index.html
@@ -28,11 +28,59 @@
                     <h1>Why Web Development??</h1>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
                 </div>
+                <div class="frist-model-cantainer">
+                    <div class="frist-model">
+                        <div class="frist-model-text-cantainer">
+                            <h1>I will Do Coding and Change The World</h1>
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                            <button>Learn More</button>
+                        </div>
+                        <div class="firist-model-image-cantainer">
+                            <img src="/assets/Layer_1.png" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="second-model-cantainer">
+                    <div class="second-model">
+                        <div class="second-model-image-cantainer">
+                            <img src="/assets/Group 3.png" alt="">
+                        </div>
+                        <div class="second-model-text-cantainer">
+                            <h1>I will help People by creating Modern Web System</h1>
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                            <button>Learn More</button>
+                        </div>
+                    </div>
+                </div>
 
+                <div class="frist-model-cantainer">
+                    <div class="frist-model">
+                        <div class="frist-model-text-cantainer">
+                            <h1>I will Do Coding and Change The World</h1>
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                            <button>Learn More</button>
+                        </div>
+                        <div class="firist-model-image-cantainer">
+                            <img src="/assets/Group 4.png" alt="">
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
       </section>
+
+      <section class="Inspiration-cantainer">
+        <div class="Inspiration-main-cantainer">
+            <div class="Inspiration-text-cantainer">
+                <h1>My Inspiration</h1>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+            </div>
+
+        </div>
+      </section>
+
+
     </main>
     <footer>
 
