--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         </div>
                         <div class="second-model-text-cantainer">
                             <h1>I will help People by creating Modern Web System</h1>
-                            <p>coding can transform the world by solving problems and innovating.".</p>
+                            <p>coding can transform the world by solving problems.</p>
                             <button>Learn More</button>
                         </div>
                     </div>
