--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
      <div class="banner-section-container">
         <div class="banner-photo-text-container">
           
-                <img src="/assets/Group.png" alt="">
+                <img src="./assets/Group.png" alt="">
                 <h1>"In the near future, I hope to become a Developer."</h1>
                 <p>As a future web developer, I am passionate about creating innovative and user-friendly websites that provide an exceptional user experience and functionality.</p>
                 <a href="#again-footer">
