--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
                             <button>Learn More</button>
                         </div>
                         <div class="firist-model-image-cantainer">
-                            <img src="/assets/Layer_1.png" alt="">
+                            <img src="./assets/Layer_1.png" alt="">
                         </div>
                     </div>
                 </div>
                 <div class="second-model-cantainer">
                     <div class="second-model">
                         <div class="second-model-image-cantainer">
-                            <img src="/assets/Group 3.png" alt="">
+                            <img src="./assets/Group 3.png" alt="">
                         </div>
                         <div class="second-model-text-cantainer">
                             <h1>I will help People by creating Modern Web System</h1>
@@ -64,7 +64,7 @@
                             <button>Learn More</button>
                         </div>
                         <div class="firist-model-image-cantainer">
-                            <img src="/assets/Group 4.png" alt="">
+                            <img src="./assets/Group 4.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -99,7 +99,7 @@
             <div class="tree-cantainer-one-line">
                 <div class="target-html">
                     <div class="target-html-main">
-                        <img src="/assets/html.png" alt="">
+                        <img src="./assets/html.png" alt="">
                         <h1>HTML</h1>
                         <p>HTML structures web content, making information organized </p>
                         <a href="https://developer.mozilla.org/en-US/docs/Glossary/HTML5">
@@ -110,7 +110,7 @@
                 </div>
                 <div class="target-css">
                     <div class="target-css-main">
-                        <img src="/assets/css.png" alt="">
+                        <img src="./assets/css.png" alt="">
                         <h1>CSS</h1>
                         <p>CSS styles web pages for enhanced visual appeal</p>
                         <a href="https://www.w3schools.com/css/">
@@ -120,7 +120,7 @@
                 </div>
                 <div class="target-js">
                     <div class="target-js-main">
-                        <img src="/assets/js.png" alt="">
+                        <img src="./assets/js.png" alt="">
                         <h1>JavaScript</h1>
                         <p>JavaScript adds interactivity and dynamic content to web pages effectively</p>
                         <a href="https://www.w3schools.com/js/default.asp">
@@ -160,13 +160,13 @@
              </div>
              <div class="footer-link-container">
                <a href="https://www.facebook.com/alifahamedongkon" target="_blank">
-                <img src="/assets/facebook.png" alt="">
+                <img src="./assets/facebook.png" alt="">
                </a>
                 <a href="https://www.linkedin.com/in/md-alif-406b2721a/"target="_blank">
-                    <img src="/assets/linkedin-icon 1.png" alt="">
+                    <img src="./assets/linkedin-icon 1.png" alt="">
                 </a>
                 <a href="https://github.com/ALIFAHMEDONGKON21" target="_blank">
-                    <img src="/assets/github.png" alt="">
+                    <img src="./assets/github.png" alt="">
                 </a>
                 
              </div>
