--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                         <p>Web developer support ensures seamless functionality, addressing issues, and optimizing user experience</p>
                     </div>
                     <div class="input-sumit-cantainer">
-                        <input type="Suggest me any feedback for me">
+                        <input placeholder="Suggest me any feedback for me">
                         <button>Submit</button>
                     </div>
                 </div>
